// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convertAjvErrors() all fields defined converts properly 1`] = `
Array [
  Object {
    "code": "required",
    "message": "c is required",
    "path": Array [
      "b",
    ],
    "severity": 0,
  },
]
`;

exports[`convertAjvErrors() errors are not set converts properly 1`] = `Array []`;

exports[`convertAjvErrors() keyword field is missing converts properly 1`] = `
Array [
  Object {
    "code": "",
    "message": "c is required",
    "path": Array [
      "b",
    ],
    "severity": 0,
  },
]
`;

exports[`convertAjvErrors() message field is missing converts properly 1`] = `
Array [
  Object {
    "code": "required",
    "message": "",
    "path": Array [
      "b",
    ],
    "severity": 0,
  },
]
`;

exports[`validateAgainstSchema() has validation errors returns validation errors 1`] = `
Array [
  Object {
    "message": "should be number",
    "name": "type",
    "path": Array [
      "pfx",
    ],
    "severity": 0,
    "summary": "should be number",
  },
]
`;
